데이터베이스

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
   <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
   <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-tertiary"> -->
     <div class="container">
-      <a class="navbar-brand" href="/">메인</a>
+      <a class="navbar-brand" href="/">로아그래프</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -32,8 +32,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navMenu">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="#">메뉴</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">메뉴</a></li>
+          <li class="nav-item"><a class="nav-link" href="#"></a></li>
+          <li class="nav-item"><a class="nav-link" href="#">메뉴보기</a></li>
           <li class="nav-item"><a class="nav-link" href="#">마이페이지</a></li>
         </ul>
       </div>
