--- a/templates/graphs.html
+++ b/templates/graphs.html
@@ -7,6 +7,7 @@
   <h1 class="mb-4">그래프 보기</h1>
   <div class="card">
     <div class="card-body">
+      어쩌고저쩌고
       <!-- TODO: 그래프를 여기에 추가 -->
     </div>
   </div>
