--- a/templates/news.html
+++ b/templates/news.html
@@ -7,8 +7,7 @@
   <h1 class="mb-4">오늘의 소식</h1>
   <div class="card">
     <div class="card-body">
-        대머리가 되지 않으려면? <br />
-        머리를 심는다.
+      오니니 나라나이나라 코로스
       <!-- TODO: 뉴스 내용을 여기에 추가 -->
     </div>
   </div>
