--- a/templates/news.html
+++ b/templates/news.html
@@ -7,7 +7,7 @@
   <h1 class="mb-4">오늘의 소식</h1>
   <div class="card">
     <div class="card-body">
-      오니니 나라나이나라 코로스
+      숨참고 럽다입
       <!-- TODO: 뉴스 내용을 여기에 추가 -->
     </div>
   </div>
